@@ -35,7 +35,9 @@ public class ExternalCommand extends AbstractCommand {
     public CommandResult execute(List<String> input, @NotNull Environment environment) throws CliException {
         try {
             String[] args = arguments.toArray(new String[0]);
-            Process commandProcess = Runtime.getRuntime().exec(args);
+            Process commandProcess = new ProcessBuilder(args)
+                    .directory(Environment.getCurrentDirectory().toFile())
+                    .start();
             FileIO.writeLines(input, commandProcess.getOutputStream());
             commandProcess.getOutputStream().close();
             return new CommandResult(FileIO.readLines(commandProcess.getInputStream()));
